--- a/src/app/composants/login/login.component.html
+++ b/src/app/composants/login/login.component.html
@@ -43,7 +43,7 @@
 							</div>
 						</div>
 							<div class="d-flex justify-content-center mt-3 login_container">
-				 	<button type="button" name="button" class="btn login_btn " (click)="authenticate()"><a routerLink="/home" routerLinkActive="active">login</a></button>
+				 	<button routerLink="dash" routerLinkActive="active" type="button" name="button" class="btn login_btn " (click)="authenticate()"><a routerLink="/home" routerLinkActive="active">login</a></button>
 				   </div>
 					</form>
 				</div>
