remove login component from app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,8 +16,8 @@
 
 <!--<app-adduser></app-adduser>-->
 
-<app-sidebar *ngIf="open"></app-sidebar>
+<app-sidebar ></app-sidebar>
 
-<app-login ></app-login>
+<!--<app-login ></app-login>-->
 <!--<app-list-produit></app-list-produit>-->
  </html>
